@@ -73,7 +73,8 @@ class Manager<T : Object> {
 		var cl : Dynamic = classval;
 
 		// get basic infos
-		table_name = quoteField(if( cl.TABLE_NAME != null ) cl.TABLE_NAME else cl.__name__[cl.__name__.length-1]);
+		var cname : Array<String> = cl.__name__;
+		table_name = quoteField(if( cl.TABLE_NAME != null ) cl.TABLE_NAME else cname[cname.length-1]);
 		table_keys = if( cl.TABLE_IDS != null ) cl.TABLE_IDS else ["id"];
 		class_proto = cl;
 		lock_mode = 2;
