@@ -32,6 +32,7 @@ TODO :
 	flash9 : fixed issue with flash.* string enums verify error
 	compiler : allowed \r line separators for HXML files
 	flash9 : fixed verify error with loop variable beeing a specific class
+	compiler : prevent truncating float dynamic values to int when using numerical operations
 
 2008-11-23: 2.02
 	Std.is(MyInterface, Class) now returns true (haXe/PHP)
